Add Header and Main
Added Cards using flexbox

--- a/index.html
+++ b/index.html
@@ -4,9 +4,104 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Flex Cards</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap"
+            rel="stylesheet">
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
+        <header id="site_header">
+            <h1 class="text-center mb-3 mt-2">Meet Our Team</h1>
+        </header>
+        <!-- /#site_header -->
+        <main id="site_main">
+            <div class="container">
+                <p class="text-center mb-2">Lorem ipsum, dolor sit amet consectetur
+                    adipisicing elit. Eum incidunt reiciendis dolore, quos fuga
+                    voluptates rem exercitationem temporibus quam labore est
+                    cumque inventore culpa voluptas velit alias doloribus,
+                    numquam magnam!</p>
+                <div class="cards-container">
+                    <div class="card">
+                        <div class="avatar">
+                            <img src="./assets/img/male1.png"
+                                alt="a Smoking Man">
+                        </div>
+                        <div class="details">
+                            <h3>MARCO BIANCHI</h3>
+                            <div class="job">Designer</div>
+                            <a href="#">marcobianchi@team.com</a>
+                        </div>
+                    </div>
+                    <!-- /.card -->
+                    <div class="card">
+                        <div class="avatar">
+                            <img src="./assets/img/female1.png"
+                                alt="a Drinking Woman">
+                        </div>
+                        <div class="details">
+                            <h3>LAURA ROSSI</h3>
+                            <div class="job">Front-end Developer</div>
+                            <a href="#">laurarossi@team.com</a>
+                        </div>
+                    </div>
+                    <!-- /.card -->
+                    <div class="card">
+                        <div class="avatar">
+                            <img src="./assets/img/male2.png"
+                                alt="a Smoking Man">
+                        </div>
+                        <div class="details">
+                            <h3>GIORGIO VERDI</h3>
+                            <div class="job">Back-end Developer</div>
+                            <a href="#">giorgioverdi@team.com</a>
+                        </div>
+                    </div>
+                    <!-- /.card -->
+                    <div class="card">
+                        <div class="avatar">
+                            <img src="./assets/img/female2.png"
+                                alt="a Smoking Man">
+                        </div>
+                        <div class="details">
+                            <h3>MARTA IPSUM</h3>
+                            <div class="job">SEO Specialist</div>
+                            <a href="#">martaipsum@team.com</a>
+                        </div>
+                    </div>
+                    <!-- /.card -->
+                    <div class="card">
+                        <div class="avatar">
+                            <img src="./assets/img/male3.png"
+                                alt="a Smoking Man">
+                        </div>
+                        <div class="details">
+                            <h3>ROBERTO LOREM</h3>
+                            <div class="job">Project Manager</div>
+                            <a href="#">robertolorem@team.com</a>
+                        </div>
+                    </div>
+                    <!-- /.card -->
+                    <div class="card">
+                        <div class="avatar">
+                            <img src="./assets/img/female3.png"
+                                alt="a Smoking Man">
+                        </div>
+                        <div class="details">
+                            <h3>DANIELA AMET</h3>
+                            <div class="job">Analyst</div>
+                            <a href="#">danielaamet@team.com</a>
+                        </div>
+                    </div>
+                    <!-- /.card -->
 
+                </div>
+                <!-- /.cards-container -->
+            </div>
+            <!-- /.container -->
+        </main>
+        <!-- /#site_main -->
     </body>
 </html>
