Remove flex-shrink

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <!-- /#site_header -->
         <main id="site_main">
             <div class="container">
-                <p class="text-center mb-2">Lorem ipsum, dolor sit amet consectetur
+                <p class="text-center mb-2">Lorem ipsum, dolor sit amet
+                    consectetur
                     adipisicing elit. Eum incidunt reiciendis dolore, quos fuga
                     voluptates rem exercitationem temporibus quam labore est
                     cumque inventore culpa voluptas velit alias doloribus,
@@ -96,7 +97,6 @@
                         </div>
                     </div>
                     <!-- /.card -->
-
                 </div>
                 <!-- /.cards-container -->
             </div>
